# my-api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: bq.py  db.py  main.py  models.py  schemas.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
